[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "me551-solver"
version = "1.0.0"
description = "ME551 Linear Vibration Midterm Exam Solver"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.scripts]
me551 = "me551_solver.ui.cli:main"
